# kiwi

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .licenserc.yaml  AGENTS.md  CHANGELOG.md  CHANGES.md  CLAUDE.md  CMakeLists.txt  CODING_STYLE_FIXES.md  CONTRIBUTING.md  Cargo.toml  Cargo_debug.toml  DUAL_RUNTIME_PROJECT_COMPLETION.md  Dockerfile  LICENSE  LICENSE.md  LINT_FIXES.md  Makefile  RAFT_IMPLEMENTATION_STATUS.md  README.md  README_CN.md  clippy.toml  cluster.conf  config.example.toml  dump.rdb  kiwi.conf  rust-toolchain.toml  rustfmt.toml  search-vector-refactor-notes.md  test_mset.rs  unit_test.sh
src/: CMakeLists.txt  base_cmd.cc  base_cmd.h  brpc_redis.cc  brpc_redis.h  cache_define.h  client.cc  client.h  client_map.cc  client_map.h  cmd_admin.cc  cmd_admin.h  cmd_hash.cc  cmd_hash.h  cmd_keys.cc  cmd_keys.h  cmd_kv.cc  cmd_kv.h  cmd_list.cc  cmd_list.h  cmd_raft.cc  cmd_raft.h  cmd_set.cc  cmd_set.h  cmd_table_manager.cc  cmd_table_manager.h  cmd_thread_pool.cc  cmd_thread_pool.h  cmd_thread_pool_worker.cc  cmd_thread_pool_worker.h  cmd_zset.cc  cmd_zset.h  common.cc  common.h  config.cc  config.h  config_parser.cc  config_parser.h  crc64.c  db.cc  (+41 more)
src/cache/: CMakeLists.txt  cache.cc  cache.h  config.h  hash.cc  list.cc  redisCache.cc  redisCache.h  set.cc  string.cc  zset.cc
src/client/: Cargo.toml
src/client/src/: lib.rs
src/cmd/: Cargo.toml
src/cmd/src/: admin.rs  append.rs  auth.rs  bitcount.rs  bitop.rs  bitpos.rs  cluster.rs  decr.rs  decrby.rs  del.rs  exists.rs  expire.rs  expireat.rs  flushall.rs  flushdb.rs  ft_create.rs  ft_search.rs  get.rs  getbit.rs  getrange.rs  getset.rs  group_client.rs  hdel.rs  hello.rs  hexists.rs  hget.rs  hgetall.rs  hincrby.rs  hincrbyfloat.rs  hkeys.rs  hlen.rs  hmget.rs  hmset.rs  hscan.rs  hset.rs  hsetnx.rs  hstrlen.rs  hvals.rs  incr.rs  incrby.rs  (+60 more)
src/cmd/tests/: ft_search_cmd_test.rs
src/command/: CMakeLists.txt  cmd_admin.cc  cmd_admin.h  cmd_hash.cc  cmd_keys.cc  cmd_kv.cc  cmd_set.cc
src/common/macro/: Cargo.toml
src/common/runtime/: Cargo.toml  additional_unit_tests.rs  config.rs  error.rs  error_logging.rs  fault_isolation.rs  global_storage.rs  health.rs  lib.rs  manager.rs  message.rs  metrics.rs  storage_server.rs  stress_tests.rs  tests.rs
src/conf/: Cargo.toml  config.ini  kiwi.conf  test.conf
src/conf/src/: conf.rs  config.rs  de_func.rs  error.rs  lib.rs  main.rs  parse.rs  raft_type.rs  runtime_config.rs
src/engine/: Cargo.toml
src/engine/src/: engine.rs  error.rs  lib.rs  rocksdb_engine.rs  traits.rs  types.rs
src/executor/: Cargo.toml
src/executor/src/: builder.rs  cluster_executor.rs  executor.rs  lib.rs  task.rs
src/handler/: Cargo.toml
src/kstd/: Cargo.toml  defer.rs  env.rs  lock_mgr.rs  mod.rs  slice.rs  status.rs
src/kstd/src/: env.rs  lib.rs  lock_mgr.rs  slice.rs  status.rs
src/kstd/tests/: lock_mgr_test.rs  mod.rs  slice_test.rs  status_test.rs
src/net/: CMakeLists.txt  Cargo.toml  base_event.h  base_socket.cc  base_socket.h  callback_function.h  client_socket.cc  client_socket.h  config.h  epoll_event.cc  epoll_event.h  event_obj.h  event_server.cc  event_server.h  handle.rs  http_client.h  http_server.h  io_thread.cc  io_thread.h  kqueue_event.cc  kqueue_event.h  listen_socket.cc  listen_socket.h  listen_sockets_mananger.h  net_event.h  net_options.h  pipe_obj.h  reactor.h  socket_addr.h  stream_socket.cc  stream_socket.h  tcp_connection.h  tcp_listener.h  thread_manager.h  timer.cc  timer.h  timer_task.h
src/net/benches/: network_benchmark.rs
src/net/src/: '  async_resp_parser.rs  base_cmd.rs  buffer.rs  client.rs  cmd.rs  cmd_get.rs  cmd_group_client.rs  cmd_kv.rs  cmd_set.rs  cmd_table.rs  constant.rs  error.rs  executor_ext.rs  handle.rs  lib.rs  network_execution.rs  network_handle.rs  network_server.rs  optimized_handler.rs  pipeline.rs  pool.rs  raft_network_handle.rs  resp.rs  storage_client.rs  tcp.rs  unix.rs
src/net/tests/: mod.rs  network_integration_tests.rs  performance_tests.rs  storage_command_e2e_tests.rs
src/praft/: CMakeLists.txt  praft.cc  praft.h  praft.proto  praft_service.h  psnapshot.cc  psnapshot.h
src/pstd/: CMakeLists.txt  env.cc  env.h  kiwi_slot.h  lock_free_ring_buffer.h  lock_mgr.cc  lock_mgr.h  log.h  memory_file.cc  memory_file.h  mutex.h  mutex_impl.cc  mutex_impl.h  noncopyable.h  pstd_defer.h  pstd_hash.cc  pstd_hash.h  pstd_mutex.h  pstd_slice.h  pstd_status.cc  pstd_status.h  pstd_string.cc  pstd_string.h  pstd_util.cc  pstd_util.h  scope_record_lock.cc  scope_record_lock.h  thread_pool.cc  thread_pool.h
src/pstd/tests/: CMakeLists.txt  pstd_string_test.cc  (+2 more)
src/raft/: ADAPTOR_POC_SUMMARY.md  CMakeLists.txt  Cargo.toml  FINAL_SOLUTION.md  FINAL_SOLUTION_SUMMARY.md  OPENRAFT_ADAPTOR_SOLUTION.md  OPENRAFT_LIFETIME_ISSUE_SUMMARY.md  binlog.proto  build.rs  raft.cc  raft.h  raft_service.h  snapshot.cc  snapshot.h
src/resp/: CMakeLists.txt  Cargo.toml  command.rs  encode.rs  mod.rs  parse.rs  resp2_encode.cc  resp2_encode.h  resp2_parse.cc  resp2_parse.h  resp_encode.cc  resp_encode.h  resp_parse.h  types.rs
src/server/: Cargo.toml
src/std/: CMakeLists.txt  env.cc  env.h  kiwi_slot.cc  kiwi_slot.h  lock_free_ring_buffer.h  lock_mgr.cc  lock_mgr.h  log.h  memory_file.cc  memory_file.h  mutex.h  mutex_impl.cc  mutex_impl.h  noncopyable.h  scope_record_lock.cc  scope_record_lock.h  std_coding.cc  std_coding.h  std_defer.h  std_hash.cc  std_hash.h  std_mutex.h  std_slice.h  std_status.cc  std_status.h  std_string.cc  std_string.h  std_util.cc  std_util.h  thread_pool.cc  thread_pool.h
src/storage/: CMakeLists.txt  Cargo.toml  base_data_value_format.rs  base_filter.rs  base_key_format.rs  base_meta_value_format.rs  base_value_format.rs  coding.rs  column_family.rs  compaction_filter.rs  engine.rs  error.rs  lib.rs  lock_mgr.rs  lru_cache.rs  mod.rs  options.rs  options_helper.rs  redis.rs  redis_hyperloglog.rs  redis_multi.rs  redis_zsets.rs  slot_indexer.rs  storage.rs  storage_define.rs  storage_impl.rs  storage_murmur3.rs  strings_value_format.rs  util.rs
src/tools/: migrate_db_member_format.rs
(+685 files in other folders)
