[workspace]
resolver = "2"
members = [
	"src/engine",
	"src/storage",
	"src/kstd",
	"src/common/macro",
	"src/common/runtime",
	"src/net",
	"src/resp",
	"src/server",
	"src/conf",
	"src/cmd",
	"src/executor",
	"src/client",
	"src/raft"
]

[workspace.package]
version = "0.1.0"
description = "An enhanced Redis server implemented in Rust"
readme = "README.md"
repository = "https://github.com/arana-db/kiwi"
edition = "2021"

[workspace.lints.clippy]
dbg_macro = "warn"
implicit_clone = "warn"
result_large_err = "allow"
large_enum_variant = "allow"

[workspace.lints.rust]
unknown_lints = "deny"
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(tokio_unstable)'] }

[workspace.dependencies]

bytes = { version = "1", features = ["serde"] }
chrono = "0.4.40"
proc-macro2 = "1.0.66"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "full"] }
env_logger = "0.11"
log = "0.4"
rocksdb = { version = "0.23.0", features = ["multi-threaded-cf"] }
thiserror = "1.0"
serde = "1.0"
serde_json = "1.0"
once_cell = "1.15"
nom = "8.0.0"
num_cpus = "1.15"
murmur3 = "0.1"
anyhow = "1.0"
byteorder = "1.4"
parking_lot = "0.12"
tokio = { version = "1", features = ["full"] }
snafu = "0.8"
tempfile = "3.8"
crc16 = "0.4"
async-channel = "2.5.0"
tokio-util = "0.7.16"
async-trait = "0.1"
foyer = { version = "0.17" }
clap = { version = "4.0", features = ["derive"] }
rand = "0.8"
uuid = { version = "1.0", features = ["v4", "serde"] }
openraft = { version = "0.9.21", features = ["serde"] }

## workspaces members
engine = { path = "src/engine" }
storage = { path = "src/storage" }
kstd = { path = "src/kstd" }
common-macro = { path = "src/common/macro" }
runtime = { path = "src/common/runtime" }
net = { path = "src/net" }
resp = { path = "src/resp" }
server = { path = "src/server" }
conf = { path = "src/conf" }
cmd = { path = "src/cmd" }
executor = { path = "src/executor" }
client = { path = "src/client" }
raft = { path = "src/raft" }

[profile.dev]
split-debuginfo = "unpacked"
overflow-checks = true
# Report to https://github.com/rust-lang/rust/issues/100142 if incremental works well
incremental = true

[profile.release]
debug = 1
lto = "thin"
overflow-checks = false
opt-level = "s"         # defaults to be 3
incremental = false
codegen-units = 1