[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
resp = { path = "../resp" }
parking_lot = { workspace = true }
tokio = { version = "1.0", features = ["sync"] }