[package]
name = "cmd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { workspace = true }
bitflags = "2.9.1"
num-traits = "0.2"
bytes = { workspace = true }
storage = { path = "../storage" }
client = { path = "../client" }
resp = { path = "../resp" }

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
async-trait = "0.1"