[package]
name = "conf"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_ini = "0.2.0"
validator = { version = "0.16", features = ["derive"] }
snafu = "0.8.5"
rocksdb.workspace = true
openraft.workspace = true