[package]
name = "conf"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
validator = { version = "0.20", features = ["derive"] }
snafu = "0.8.5"
rocksdb.workspace = true
openraft.workspace = true

[dev-dependencies]
tempfile = "3"
