[package]
name = "executor"
version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
env_logger = { workspace = true }
log = { workspace = true }
num_cpus = { workspace = true }
resp = { workspace = true }
async-channel = { workspace = true }
tokio-util = { workspace = true }

[lints]
workspace = true
