[package]
name = "net"
version.workspace = true
edition.workspace = true

[lints]
workspace = true 

[dependencies]
log.workspace = true
tokio = { workspace = true, features = ["net", "io-util", "macros", "rt", "rt-multi-thread", "time"] }
storage.workspace = true
async-trait = "0.1"
snafu = "0.8"
bitflags = "2.9.1"
cmd = { path = "../cmd" }
resp = { path = "../resp" }
client = { path = "../client" }
bytes.workspace = true
executor = { path = "../executor" }
runtime = { path = "../common/runtime" }
thiserror = "1.0"
parking_lot = "0.12"

[dev-dependencies]
env_logger = "0.11"

[[bench]]
name = "network_benchmark"
harness = false