# Copyright (c) 2024-present, Arana/Kiwi Community.  All rights reserved.
# This source code is licensed under the BSD-style license found in the
# LICENSE file in the root directory of this source tree. An additional grant
# of patent rights can be found in the PATENTS file in the same directory.

ADD_CUSTOM_COMMAND(
  OUTPUT "${PROTO_OUTPUT_DIR}/binlog.pb.cc"
  DEPENDS protobuf
  COMMAND ${PROTOBUF_PROTOC}
  ARGS -I ${CMAKE_CURRENT_SOURCE_DIR}
    --cpp_out ${PROTO_OUTPUT_DIR}
    ${CMAKE_CURRENT_SOURCE_DIR}/binlog.proto
)
ADD_LIBRARY(binlog_pb STATIC "${PROTO_OUTPUT_DIR}/binlog.pb.cc")
SET(LIBRARY_OUTPUT_PATH ${PLIB_INSTALL_DIR})
TARGET_INCLUDE_DIRECTORIES(binlog_pb PRIVATE ${PROTOBUF_INCLUDE_DIR})

ADD_CUSTOM_COMMAND(
  OUTPUT "${PROTO_OUTPUT_DIR}/raft.pb.cc"
  DEPENDS protobuf
  COMMAND ${PROTOBUF_PROTOC}
  ARGS -I ${CMAKE_CURRENT_SOURCE_DIR}
    --cpp_out ${PROTO_OUTPUT_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/raft.proto
)

ADD_LIBRARY(raft_pb STATIC "${PROTO_OUTPUT_DIR}/raft.pb.cc")
TARGET_INCLUDE_DIRECTORIES(raft_pb PRIVATE ${PROTOBUF_INCLUDE_DIR})

FILE(GLOB RAFT_INST_SRC
        "${CMAKE_CURRENT_SOURCE_DIR}/*.cc"
)

SET(LIBRARY_OUTPUT_PATH ${PLIB_INSTALL_DIR})

ADD_LIBRARY(raft ${RAFT_INST_SRC})

TARGET_INCLUDE_DIRECTORIES(raft
        PRIVATE ${PROJECT_SOURCE_DIR}/src
        PRIVATE ${rocksdb_SOURCE_DIR}/include
        PRIVATE ${BRAFT_INCLUDE_DIR}
        PRIVATE ${BRPC_INCLUDE_DIR}
        PRIVATE ${PROTO_OUTPUT_DIR}
        PRIVATE ${PROJECT_SOURCE_DIR}/src/storage/include
        PRIVATE ${PSTD_INCLUDE_DIR}
)

IF (CMAKE_SYSTEM_NAME STREQUAL "Linux")
    SET(RAFT_INST_LIB ${RAFT_INST_LIB} rt)
ENDIF ()

SET(LIBRARY_OUTPUT_PATH ${PLIB_INSTALL_DIR})
ADD_DEPENDENCIES(raft protobuf raft_pb binlog_pb)
TARGET_LINK_LIBRARIES(raft
       PRIVATE net;
       PRIVATE dl;
       PRIVATE ${FMT_LIBRARIES};
       PRIVATE storage;
       PRIVATE kstd
       PRIVATE ${BRPC_LIBRARIES}
       PRIVATE ${BRAFT_LIBRARIES}
       PRIVATE ${OPENSSL_SSL_LIBRARY}
       PRIVATE ${OPENSSL_CRYPTO_LIBRARY}
       PRIVATE ${ZLIB_LIBRARIES}
       PRIVATE ${PROTOBUF_LIBRARY}
       PRIVATE ${LEVELDB_LIBRARIES}
       PRIVATE ${GFLAGS_LIBRARY}
       PRIVATE ${ROCKSDB_LIBRARIES}
       PRIVATE z
       PRIVATE ${RAFT_INST_LIB}
)

SET_TARGET_PROPERTIES(raft PROPERTIES LINKER_LANGUAGE CXX)
