[package]
name = "raft"
version.workspace = true
edition.workspace = true

[dependencies]
openraft = { workspace = true, features = ["storage-v2", "serde"] }
storage.workspace = true
conf.workspace = true

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
bincode = "1.3"

# HTTP
actix-web = "4.12.1"
reqwest = { version = "0.13.1", features = ["json"] }

# Async
tokio.workspace = true
async-trait = "0.1.89"

# Utils
anyhow = "1.0.100"
tracing = "0.1.44"
log.workspace = true

tonic = "0.14.3"
prost = "0.14.3"
tonic-prost = "0.14.3"
tokio-stream = "0.1"

[build-dependencies]
tonic-prost-build = "0.14.3"
