[package]
name = "raft"
version.workspace = true
edition.workspace = true

[dependencies]
openraft = { workspace = true, features = ["storage-v2", "serde"] }
storage.workspace = true
conf.workspace = true
engine.workspace = true
rocksdb.workspace = true

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP
actix-web = "4.0"
reqwest = { version = "0.12", features = ["json"] }

# Async
tokio.workspace = true
async-trait = "0.1"

# Utils
anyhow = "1.0"
tracing = "0.1"
log.workspace = true

[dev-dependencies]
proptest.workspace = true
tempfile.workspace = true

