[package]
name = "server"
version.workspace = true
description.workspace = true
readme.workspace = true
repository.workspace = true
edition.workspace = true

[[bin]]
name = "kiwi"
path = "src/main.rs"

[dependencies]
net.workspace = true
runtime.workspace = true
storage.workspace = true
tokio.workspace = true
env_logger.workspace = true
log.workspace = true
conf.workspace = true
clap = { version = "4.0", features = ["derive"] }
raft.workspace = true
actix-web = "4"
tonic = "0.14"
http-body = "1"
hyper = "1"
tower = "0.4"
tonic-reflection = { version = "0.14", features = ["server"] }


[lints]
workspace = true
